# Monopoly

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/Monopoly/: main.cpp
